<package format="2">
    <name>moveit_planners_sbpl</name>
    <version>0.0.0</version>
    <description>MoveIt interface to SBPL</description>
    <author email="andrew.dornbush@gmail.com">Andrew Dornbush</author>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>eigen_conversions</depend>
    <depend>moveit_core</depend>
    <depend>moveit_ros_planning</depend>
    <depend>roscpp</depend>
    <depend>sbpl_geometry_utils</depend>
    <depend>sbpl_manipulation</depend>
    <depend>pluginlib</depend>

    <export>
        <moveit_core plugin="${prefix}/sbpl_interface_plugin_description.xml"/>
    </export>
</package>
