<package format="2">
    <name>moveit_planners_sbpl</name>
    <version>0.0.0</version>
    <description>MoveIt interface to SBPL</description>
    <author email="andrew.dornbush@gmail.com">Andrew Dornbush</author>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>actionlib</depend>
    <depend>boost</depend>
    <depend>eigen_conversions</depend>
    <depend>geometric_shapes</depend>
    <depend>interactive_markers</depend>
    <depend>leatherman</depend>
    <depend>moveit_core</depend>
    <depend>moveit_msgs</depend>
    <depend>moveit_ros_planning</depend>
    <depend>roscpp</depend>
    <depend>rviz</depend>
    <depend>smpl</depend>
    <depend>smpl_ros</depend>
    <depend>sbpl_collision_checking</depend>
    <depend>sensor_msgs</depend>
    <depend>pluginlib</depend>
    <depend>visualization_msgs</depend>

    <build_depend>libqt4-dev</build_depend>

    <exec_depend>libqt4</exec_depend>

    <export>
        <moveit_core plugin="${prefix}/sbpl_interface_plugin_description.xml"/>
        <moveit_core plugin="${prefix}/collision_detection_sbpl_plugin_description.xml"/>
        <rviz plugin="${prefix}/move_group_command_panel_plugin_description.xml"/>
    </export>
</package>
